fixed blank space overflow problem

--- a/site/css/sass/partials/base/_base-layout.scss
+++ b/site/css/sass/partials/base/_base-layout.scss
@@ -2,6 +2,7 @@ body {
     display:grid;
     grid-template-rows: auto 1fr auto;
     min-height: 100vh;
+    width: 100%;
 }
 
 main {
