--- a/site/css/sass/partials/sections/_projects.scss
+++ b/site/css/sass/partials/sections/_projects.scss
@@ -46,7 +46,6 @@
         padding: 1rem;
         color: $color-white;
         border-radius: 0.2rem;
-        pointer-events: none;
 
         .project-links {
             display: flex;
