--- a/site/css/sass/style.css
+++ b/site/css/sass/style.css
@@ -56,6 +56,7 @@ body {
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
+  width: 100%;
 }
 
 main {
@@ -68,6 +69,14 @@ main {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 body {
@@ -293,7 +302,6 @@ nav .nav-toggle {
   padding: 1rem;
   color: #fbfbff;
   border-radius: 0.2rem;
-  pointer-events: none;
 }
 .project-details .project-links {
   display: flex;
@@ -368,6 +376,7 @@ section {
   flex-direction: column;
   align-items: center;
   width: 95%;
+  background: blue;
 }
 
 .container {
